# global_timezone

./: OAT.xml  README.en.md  README.md  README_zh.md  bundle.json
data/: BUILD.gn
data/prebuild/icu/: metaZones.res  timezoneTypes.res  windowsZones.res  zoneinfo64.res
data/prebuild/tool/linux/: zic
tool/compile_tool/: compile.sh
tool/update_tool/: download_iana.py
