# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("metaZones") {
  source = "//base/global/timezone/data/prebuild/icu/metaZones.res"
  module_install_dir = "etc/icu_tzdata"
  part_name = "timezone"
  subsystem_name = "global"
}

ohos_prebuilt_etc("timezoneTypes") {
  source = "//base/global/timezone/data/prebuild/icu/timezoneTypes.res"
  module_install_dir = "etc/icu_tzdata"
  part_name = "timezone"
  subsystem_name = "global"
}

ohos_prebuilt_etc("windowsZones") {
  source = "//base/global/timezone/data/prebuild/icu/windowsZones.res"
  module_install_dir = "etc/icu_tzdata"
  part_name = "timezone"
  subsystem_name = "global"
}

ohos_prebuilt_etc("zoneinfo64") {
  source = "//base/global/timezone/data/prebuild/icu/zoneinfo64.res"
  module_install_dir = "etc/icu_tzdata"
  part_name = "timezone"
  subsystem_name = "global"
}

group("icu_tzdata") {
  # just for standard system
  if (is_standard_system) {
    deps = [
      ":metaZones",
      ":timezoneTypes",
      ":windowsZones",
      ":zoneinfo64",
    ]
    external_deps = [
      "tzdata:zoneinfo"
    ]
  }
}
